tests/typecheck/should_compile/T2478.hs
{-# LANGUAGE ExistentialQuantification, DatatypeContexts #-}

module ShouldCompile where

  data Eq t => TrafoE t = forall env2 . TrafoE Int t

  newSRef () = TrafoE 
